blueprints/construction-trades/salesforce/force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>A physical location where work is done, with access and induction needs. One client can have many sites, and one site can host several projects over the years. Holds no personal data.</description>
    <label>Site</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>