blueprints/construction-trades/salesforce/force-app/main/default/objects/Site__c/fields/Access_notes__c.field-meta.xml
<CustomField>
    <fullName>Access_notes__c</fullName>
    <description>Parking, working hours, security and hazards for crews. Must not hold personal data.</description>
    <label>Access notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>