blueprints/construction-trades/salesforce/force-app/main/default/objects/Site__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every site a client owns or manages.</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>