blueprints/construction-trades/salesforce/force-app/main/default/objects/Site__c/fields/Induction_required__c.field-meta.xml
<CustomField>
    <fullName>Induction_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Operatives must complete a site induction before starting.</description>
    <label>Induction required</label>
    <type>Checkbox</type>
</CustomField>