blueprints/construction-trades/salesforce/force-app/main/default/objects/Site__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <description>Postcode of the site, for routing crews and checking travel time.</description>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>