blueprints/construction-trades/salesforce/force-app/main/default/objects/Site__c/fields/Site_type__c.field-meta.xml
<CustomField>
    <fullName>Site_type__c</fullName>
    <description>The kind of premises. Decides induction, permits and working hours.</description>
    <label>Site type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential block</fullName>
            </value>
            <value>
                <fullName>Public building</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>